--- a/index.html
+++ b/index.html
@@ -206,32 +206,103 @@
         const cpuData = [
             { id: 'i5-2400', name: 'Intel Core i5-2400', score: 3870, details: '4 Çekirdek, 4 İzlek' },
             { id: 'i7-4790', name: 'Intel Core i7-4790', score: 7266, details: '4 Çekirdek, 8 İzlek' },
-            { id: 'r5-2600x', name: 'AMD Ryzen 5 2600X', score: 13800, details: '6 Çekirdek, 12 İzlek' },
             { id: 'i5-10400f', name: 'Intel Core i5-10400F', score: 12127, details: '6 Çekirdek, 12 İzlek' },
-            { id: 'r5-3600', name: 'AMD Ryzen 5 3600', score: 17750, details: '6 Çekirdek, 12 İzlek' },
             { id: 'i5-11600k', name: 'Intel Core i5-11600K', score: 21500, details: '6 Çekirdek, 12 İzlek' },
-            { id: 'r5-5600x', name: 'AMD Ryzen 5 5600X', score: 21873, details: '6 Çekirdek, 12 İzlek' },
             { id: 'i7-12700k', name: 'Intel Core i7-12700K', score: 34967, details: '12 Çekirdek, 20 İzlek' },
-            { id: 'r7-7800x3d', name: 'AMD Ryzen 7 7800X3D', score: 48674, details: '8 Çekirdek, 16 İzlek' },
             { id: 'i9-14900k', name: 'Intel Core i9-14900K', score: 62000, details: '24 Çekirdek, 32 İzlek' },
+            // AMD CPUs
+            { id: 'r3-1200', name: 'AMD Ryzen 3 1200', score: 6200, details: '4 Çekirdek, 4 İzlek' },
+            { id: 'r5-1600', name: 'AMD Ryzen 5 1600', score: 12271, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r5-2600x', name: 'AMD Ryzen 5 2600X', score: 13800, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-2700x', name: 'AMD Ryzen 7 2700X', score: 17800, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r5-3600', name: 'AMD Ryzen 5 3600', score: 17750, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-3700x', name: 'AMD Ryzen 7 3700X', score: 23600, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r9-3900x', name: 'AMD Ryzen 9 3900X', score: 33400, details: '12 Çekirdek, 24 İzlek' },
+            { id: 'r5-5600x', name: 'AMD Ryzen 5 5600X', score: 21873, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-5800x', name: 'AMD Ryzen 7 5800X', score: 30000, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r9-5900x', name: 'AMD Ryzen 9 5900X', score: 39000, details: '12 Çekirdek, 24 İzlek' },
+            { id: 'r9-5950x', name: 'AMD Ryzen 9 5950X', score: 45000, details: '16 Çekirdek, 32 İzlek' },
+            { id: 'r5-7600x', name: 'AMD Ryzen 5 7600X', score: 28000, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-7700x', name: 'AMD Ryzen 7 7700X', score: 36000, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r7-7800x3d', name: 'AMD Ryzen 7 7800X3D', score: 48674, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r9-7900x', name: 'AMD Ryzen 9 7900X', score: 45000, details: '12 Çekirdek, 24 İzlek' },
+            { id: 'r9-7950x', name: 'AMD Ryzen 9 7950X', score: 59000, details: '16 Çekirdek, 32 İzlek' },
             { id: 'r9-7950x3d', name: 'AMD Ryzen 9 7950X3D', score: 63500, details: '16 Çekirdek, 32 İzlek' },
+            { id: 'r3-3100', name: 'AMD Ryzen 3 3100', score: 10400, details: '4 Çekirdek, 8 İzlek' },
+            { id: 'r5-3500x', name: 'AMD Ryzen 5 3500X', score: 13000, details: '6 Çekirdek, 6 İzlek' },
+            { id: 'r5-4600g', name: 'AMD Ryzen 5 4600G', score: 16003, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-4700g', name: 'AMD Ryzen 7 4700G', score: 21000, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r9-4900hs', name: 'AMD Ryzen 9 4900HS', score: 18869, details: '8 Çekirdek, 16 İzlek' }, // Laptop CPU
+            { id: 'r3-5300u', name: 'AMD Ryzen 3 5300U', score: 9800, details: '4 Çekirdek, 8 İzlek' }, // Laptop CPU
+            { id: 'r5-5500u', name: 'AMD Ryzen 5 5500U', score: 14500, details: '6 Çekirdek, 12 İzlek' }, // Laptop CPU
+            { id: 'r7-5700u', name: 'AMD Ryzen 7 5700U', score: 19500, details: '8 Çekirdek, 16 İzlek' }, // Laptop CPU
+            { id: 'r5-5600g', name: 'AMD Ryzen 5 5600G', score: 20500, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r7-5700g', name: 'AMD Ryzen 7 5700G', score: 24000, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r5-7500f', name: 'AMD Ryzen 5 7500F', score: 26000, details: '6 Çekirdek, 12 İzlek' },
+            { id: 'r9-7900x3d', name: 'AMD Ryzen 9 7900X3D', score: 55000, details: '12 Çekirdek, 24 İzlek' },
+            { id: 'r7-8700g', name: 'AMD Ryzen 7 8700G', score: 38000, details: '8 Çekirdek, 16 İzlek' },
+            { id: 'r5-8600g', name: 'AMD Ryzen 5 8600G', score: 30000, details: '6 Çekirdek, 12 İzlek' },
         ];
 
         const gpuData = [
+            // NVIDIA GTX Series
+            { id: 'gtx-750ti', name: 'NVIDIA GeForce GTX 750 Ti', score: 3900, details: '2GB GDDR5' },
             { id: 'gtx-950', name: 'NVIDIA GeForce GTX 950', score: 5346, details: '2GB GDDR5' },
             { id: 'gtx-960', name: 'NVIDIA GeForce GTX 960', score: 8000, details: '2GB GDDR5' },
-            { id: 'rx-570', name: 'AMD Radeon RX 570', score: 12000, details: '8GB GDDR5' },
+            { id: 'gtx-970', name: 'NVIDIA GeForce GTX 970', score: 9800, details: '4GB GDDR5' },
+            { id: 'gtx-1050', name: 'NVIDIA GeForce GTX 1050', score: 4500, details: '2GB GDDR5' },
+            { id: 'gtx-1050ti', name: 'NVIDIA GeForce GTX 1050 Ti', score: 6323, details: '4GB GDDR5' },
+            { id: 'gtx-1060-3gb', name: 'NVIDIA GeForce GTX 1060 (3GB)', score: 9000, details: '3GB GDDR5' },
+            { id: 'gtx-1060-6gb', name: 'NVIDIA GeForce GTX 1060 (6GB)', score: 10083, details: '6GB GDDR5' },
+            { id: 'gtx-1070', name: 'NVIDIA GeForce GTX 1070', score: 12800, details: '8GB GDDR5' },
+            { id: 'gtx-1080', name: 'NVIDIA GeForce GTX 1080', score: 14700, details: '8GB GDDR5X' },
+            { id: 'gtx-1650', name: 'NVIDIA GeForce GTX 1650', score: 7878, details: '4GB GDDR5/6' },
+            { id: 'gtx-1660', name: 'NVIDIA GeForce GTX 1660', score: 11000, details: '6GB GDDR5' },
             { id: 'gtx-1660s', name: 'NVIDIA GeForce GTX 1660 SUPER', score: 12500, details: '6GB GDDR6' },
+            { id: 'gtx-1660ti', name: 'NVIDIA GeForce GTX 1660 Ti', score: 13000, details: '6GB GDDR6' },
+
+            // NVIDIA RTX Series
             { id: 'rtx-2060', name: 'NVIDIA GeForce RTX 2060', score: 14125, details: '6GB GDDR6' },
-            { id: 'rx-6600xt', name: 'AMD Radeon RX 6600 XT', score: 18000, details: '8GB GDDR6' },
+            { id: 'rtx-2060s', name: 'NVIDIA GeForce RTX 2060 SUPER', score: 15500, details: '8GB GDDR6' },
+            { id: 'rtx-2070', name: 'NVIDIA GeForce RTX 2070', score: 16500, details: '8GB GDDR6' },
+            { id: 'rtx-2070s', name: 'NVIDIA GeForce RTX 2070 SUPER', score: 18000, details: '8GB GDDR6' },
+            { id: 'rtx-2080', name: 'NVIDIA GeForce RTX 2080', score: 19500, details: '8GB GDDR6' },
+            { id: 'rtx-2080s', name: 'NVIDIA GeForce RTX 2080 SUPER', score: 20500, details: '8GB GDDR6' },
+            { id: 'rtx-2080ti', name: 'NVIDIA GeForce RTX 2080 Ti', score: 22000, details: '11GB GDDR6' },
+            { id: 'rtx-3050', name: 'NVIDIA GeForce RTX 3050', score: 11000, details: '8GB GDDR6' },
             { id: 'rtx-3060', name: 'NVIDIA GeForce RTX 3060', score: 19500, details: '12GB GDDR6' },
-            { id: 'rx-6700xt', name: 'AMD Radeon RX 6700 XT', score: 22000, details: '12GB GDDR6' },
+            { id: 'rtx-3060ti', name: 'NVIDIA GeForce RTX 3060 Ti', score: 20414, details: '8GB GDDR6' },
             { id: 'rtx-3070', name: 'NVIDIA GeForce RTX 3070', score: 22291, details: '8GB GDDR6' },
+            { id: 'rtx-3070ti', name: 'NVIDIA GeForce RTX 3070 Ti', score: 24000, details: '8GB GDDR6X' },
             { id: 'rtx-3080', name: 'NVIDIA GeForce RTX 3080', score: 25180, details: '10GB GDDR6X' },
-            { id: 'rx-6800xt', name: 'AMD Radeon RX 6800 XT', score: 29000, details: '16GB GDDR6' },
+            { id: 'rtx-3080ti', name: 'NVIDIA GeForce RTX 3080 Ti', score: 28000, details: '12GB GDDR6X' },
+            { id: 'rtx-3090', name: 'NVIDIA GeForce RTX 3090', score: 30000, details: '24GB GDDR6X' },
+            { id: 'rtx-3090ti', name: 'NVIDIA GeForce RTX 3090 Ti', score: 32000, details: '24GB GDDR6X' },
+            { id: 'rtx-4060', name: 'NVIDIA GeForce RTX 4060', score: 18000, details: '8GB GDDR6' },
+            { id: 'rtx-4060ti', name: 'NVIDIA GeForce RTX 4060 Ti', score: 22000, details: '8GB GDDR6' },
             { id: 'rtx-4070', name: 'NVIDIA GeForce RTX 4070', score: 30000, details: '12GB GDDR6X' },
+            { id: 'rtx-4070ti', name: 'NVIDIA GeForce RTX 4070 Ti', score: 31642, details: '12GB GDDR6X' },
             { id: 'rtx-4080', name: 'NVIDIA GeForce RTX 4080', score: 34440, details: '16GB GDDR6X' },
             { id: 'rtx-4090', name: 'NVIDIA GeForce RTX 4090', score: 42000, details: '24GB GDDR6X' },
+
+            // AMD Radeon GPUs (some popular ones to balance selection)
+            { id: 'rx-470', name: 'AMD Radeon RX 470', score: 9500, details: '4GB GDDR5' },
+            { id: 'rx-570', name: 'AMD Radeon RX 570', score: 12000, details: '8GB GDDR5' },
+            { id: 'rx-580', name: 'AMD Radeon RX 580', score: 12500, details: '8GB GDDR5' },
+            { id: 'rx-5500xt', name: 'AMD Radeon RX 5500 XT', score: 10500, details: '8GB GDDR6' },
+            { id: 'rx-5600xt', name: 'AMD Radeon RX 5600 XT', score: 14000, details: '6GB GDDR6' },
+            { id: 'rx-5700xt', name: 'AMD Radeon RX 5700 XT', score: 17500, details: '8GB GDDR6' },
+            { id: 'rx-6600', name: 'AMD Radeon RX 6600', score: 15000, details: '8GB GDDR6' },
+            { id: 'rx-6600xt', name: 'AMD Radeon RX 6600 XT', score: 18000, details: '8GB GDDR6' },
+            { id: 'rx-6700xt', name: 'AMD Radeon RX 6700 XT', score: 22000, details: '12GB GDDR6' },
+            { id: 'rx-6800', name: 'AMD Radeon RX 6800', score: 26000, details: '16GB GDDR6' },
+            { id: 'rx-6800xt', name: 'AMD Radeon RX 6800 XT', score: 29000, details: '16GB GDDR6' },
+            { id: 'rx-6900xt', name: 'AMD Radeon RX 6900 XT', score: 32000, details: '16GB GDDR6' },
+            { id: 'rx-7600', name: 'AMD Radeon RX 7600', score: 20000, details: '8GB GDDR6' },
+            { id: 'rx-7700xt', name: 'AMD Radeon RX 7700 XT', score: 26000, details: '12GB GDDR6' },
+            { id: 'rx-7800xt', name: 'AMD Radeon RX 7800 XT', score: 29000, details: '16GB GDDR6' },
+            { id: 'rx-7900xt', name: 'AMD Radeon RX 7900 XT', score: 32000, details: '20GB GDDR6' },
+            { id: 'rx-7900xtx', name: 'AMD Radeon RX 7900 XTX', score: 35000, details: '24GB GDDR6' },
         ];
 
         const ramData = [
